# src/layers/controllers/edificio.controller.js
@@ -3,4 +3,14 @@ export default class EdificioController extends GenericController {
   constructor(service) {
     super(service);
   }
+
+  async agregarOficina(req, res, next) {
+    try {
+      const { edificioId, oficinaId } = req.params;
+      const result = await this.service.agregarOficina(edificioId, oficinaId);
+      res.sendSuccess(result);
+    } catch (error) {
+      next(error);
+    }
+  }
 }
